fix(Availability): hide height el on mobile

--- a/next/components/Availability.scss
+++ b/next/components/Availability.scss
@@ -31,6 +31,10 @@
 
   &__hidden-message {
     visibility: hidden;
+
+    @media (max-width: $max-md) {
+      display: none;
+    }
   }
 
   &__hidden-message,
